--- a/WP-OhMyFood/app/public/wp-content/themes/oh-my-food/scss/pages/restaurant/_divider.scss
+++ b/WP-OhMyFood/app/public/wp-content/themes/oh-my-food/scss/pages/restaurant/_divider.scss
@@ -6,7 +6,7 @@
 @use '../../utils/breakpoints' as *;
 
 .divider-mobile {
-    width: 342.696px;
+    width: 100%;
     height: 1px;
     background: #D8DCE0;
     margin: 1.2rem auto;
