--- a/WP-OhMyFood/app/public/wp-content/themes/oh-my-food/scss/pages/restaurant/_infos.scss
+++ b/WP-OhMyFood/app/public/wp-content/themes/oh-my-food/scss/pages/restaurant/_infos.scss
@@ -8,7 +8,7 @@
 // Affichage conditionnel des versions mobile/desktop de la section restaurant-infos
 .restaurant-infos-mobile {
     display: block;
-    padding: 1.2rem 2.3rem;
+    padding: 1.2rem clamp(2.3rem, 6vw, 7.2rem);
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
